Fixing menu on mobile

--- a/src/styles/scss/layout/_navigation.scss
+++ b/src/styles/scss/layout/_navigation.scss
@@ -72,14 +72,14 @@
     .menu {
       position: absolute;
       width: 80vw;
-      height: 100vh;
+      height: 102vh;
       box-shadow: 0 0 10px #85888c;
-      margin: -50px 0 0 -50px;
+      margin: -50px 0 0 70px;
       padding: 50px;
       padding-top: 125px;
-      background-color: #f5f6fa;
+      background-image: linear-gradient(to bottom right, $main-color-bright, $main-color-dark);
       transform-origin: 0% 0%;
-      transform: translate(135%, 0);
+      transform: translate(-90%, 0);
       transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
       li {
